--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ services:
   - postgresql
 addons:
   postgresql: "9.5"
+  apt:
+    packages:
+      - postgresql-9.5-postgis-2.3
 elixir:
   - 1.4.4
 otp_release:
