--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ script:
       exit 1;
     fi;
   # Run acceptance tests on Docker container
-  - "CONTAINER_HTTP_HOST=localhost CONTAINER_HTTP_PORT=4000 mix test test/acceptance"
+  # - "CONTAINER_HTTP_HOST=localhost CONTAINER_HTTP_PORT=4000 mix test test/acceptance"
 after_failure:
   - docker logs report --details --since 5h
 # Also you can
